name:         hsamp
version:      0.2
stability:    experimental
synopsis:     Send and receive messages using the Simple Application Message Protocol (SAMP).
category:     Astronomy
description:
  The Simple Application Message Protocol (SAMP,
  <http://www.ivoa.net/documents/SAMP/>), is a message passing
  scheme developed by the International Virtual Observatory
  Alliance (IVOA, <http://www.ivoa.net/>), used to connect tools
  used by Astronomers, and to break the tyranny of the
  Three Letter Acronym (TLA) restriction that has plagued the
  Astronomical community for too long.
  .
  More information on SAMP - including applications that implement
  it and message types - can be found on the SAMPInfo page 
  <http://wiki.ivoa.net/twiki/bin/view/IVOA/SampInfo>.
  .
  The hsamp library currently provides routines useful for clients,
  but not hubs. It was written to support version 1.2 and has not
  yet been reviewed for the latest version (1.3). The library
  was primarily written as a learning experience, so expect rough
  edges.

license:      BSD3
license-file: LICENSE
author:       Douglas Burke
maintainer:   dburke.gw@gmail.com

-- homepage:       https://bitbucket.org/doug_burke/hsamp/wiki/Home
homepage:       https://bitbucket.org/doug_burke/hsamp/
bug-reports:    https://bitbucket.org/doug_burke/hsamp/issues

tested-with:    GHC==7.10.2
build-type:     Simple
cabal-version:  >= 1.8

source-repository head
  type:     mercurial
  location: https://bitbucket.org/doug_burke/hsamp/

flag  testclient
  description: Build the test client (the examples are probably better)
  default: False

flag  examples
  description: Build the example programs
  default: True

flag  xmlhack
  description: Adjust the XML returned by the hub (e.g. for ds9 7.3.2). This is only used if examples is True.
--  default: False
  default: True

-- Just trying to get to build on ghc 7.10.2, so limited constraints.
-- I am not looking to support older versions of ghc at this
-- time, since I am not able to test on those (and with the recent
-- changes to the base library involving AMP/BBP it is awkward
-- to write code that covers a large range of ghc versions when you
-- are not testing on them all).
--
library
 build-depends:
   aeson,
   base >= 4.3.0,
   bytestring,
   data-default-class,
   fast-logger,
   hashable,
   haxr >= 3000.10.0,
   hslogger,
   http-conduit,
   http-types,
   mtl >= 2.2.1,
   network >= 2.6,
   network-uri >= 2.6,
   random,
   scotty >= 0.7,
   split,
   strict,
   text,
   unordered-containers,
   wai,
   wai-extra

 ghc-options:
   -Wall

 hs-source-dirs:   src/
 exposed-modules:
    Network.SAMP.Standard
    Network.SAMP.Standard.Client
    Network.SAMP.Standard.Server
    Network.SAMP.Standard.Server.Scotty
    Network.SAMP.Standard.Setup
    Network.SAMP.Standard.Types

executable testclient
  hs-source-dirs:  examples
  main-is:         TestClient.hs
  other-modules:   Paths_hsamp

  ghc-options:
     -Wall

  if flag(testclient)
    build-depends:
      base,
      bytestring,
      hsamp,
      hslogger,
      mtl,
      network,
      network-uri,
      parallel-io,
      scotty

  else
    buildable:  False

executable hsamp-basicclient
  hs-source-dirs:  examples
  main-is:         BasicClient.hs
  other-modules:   Paths_hsamp

  ghc-options:
     -Wall

  if flag(examples)
    build-depends:
      base,
      hsamp,
      hslogger,
      mtl

  else
    buildable:  False

executable hsamp-errorclient
  hs-source-dirs:  examples
  main-is:         ErrorClient.hs
  other-modules:   Paths_hsamp

  ghc-options:
     -Wall

  if flag(examples)
    build-depends:
      base,
      hslogger,
      mtl,
      hsamp

  else
    buildable:  False

executable hsamp-sender
  hs-source-dirs:  examples
  main-is:         Sender.hs
  other-modules:   Paths_hsamp
                   Utils

  ghc-options:
     -Wall

  if flag(examples)
    build-depends:
      base,
      bytestring,
      hsamp,
      hslogger,
      network,
      parallel-io,
      random,
      time

  else
    buildable:  False

executable hsamp-snooper
  hs-source-dirs:  examples
  main-is:         Snooper.hs
  other-modules:   Paths_hsamp
                   Utils

  ghc-options:
     -Wall

  if flag(examples)
    build-depends:
      base,
      bytestring,
      containers,
      hsamp,
      hslogger,
      network

  else
    buildable:  False

executable hsamp-hub
  hs-source-dirs:  examples
  main-is:         Hub.hs
  other-modules:   Paths_hsamp
                   Utils

  ghc-options:
     -Wall

  if flag(examples)
    build-depends:
      aeson,
      base,
      base64-bytestring,
      bytestring,
      containers,
      data-default-class,
      directory,
      fast-logger,
      hashable,
      haxr,
      hsamp,
      hslogger,
      http-types,
      mtl,
      network,
      network-uri,
      random,
      scotty,
      text,
      time,
      transformers,
      unix,
      unordered-containers,
      wai,
      wai-extra

    if flag(xmlhack)
      build-depends: 
        base-compat,
        HsOpenSSL,
        http-streams,
        io-streams,
        utf8-string

      hs-source-dirs:  examples/hackxml
      other-modules:   HubCall
    else
      hs-source-dirs:  examples/dummy
      other-modules:   HubCall
    
  else
    buildable:  False

