cabal-version:  2.2

name:         hsamp
version:      0.4
stability:    experimental
synopsis:     Send and receive messages using the Simple Application Message Protocol (SAMP).
category:     Astronomy
description:
  The Simple Application Message Protocol (SAMP,
  <http://www.ivoa.net/documents/SAMP/>), is a message passing
  scheme developed by the International Virtual Observatory
  Alliance (IVOA, <http://www.ivoa.net/>), used to connect tools
  used by Astronomers, and to break the tyranny of the
  Three Letter Acronym (TLA) restriction that has plagued the
  Astronomical community for too long.
  .
  More information on SAMP - including applications that implement
  it and message types - can be found on the SAMPInfo page 
  <http://wiki.ivoa.net/twiki/bin/view/IVOA/SampInfo>.
  .
  The hsamp library currently provides routines useful for clients,
  but not hubs. It was written to support version 1.2 and has not
  yet been reviewed for the latest version (1.3). The library
  was primarily written as a learning experience, so expect rough
  edges.

license:      BSD-3-Clause
license-file: LICENSE
author:       Douglas Burke
maintainer:   dburke.gw@gmail.com

-- homepage:       https://bitbucket.org/doug_burke/hsamp/wiki/Home
homepage:       https://bitbucket.org/doug_burke/hsamp/
bug-reports:    https://bitbucket.org/doug_burke/hsamp/issues

tested-with:    GHC==9.0.2
build-type:     Simple

source-repository head
  type:     mercurial
  location: https://bitbucket.org/doug_burke/hsamp/

flag  threaded
  description: Use the threaded RTS
  default: False

flag  testclient
  description: Build the test client (the examples are probably better)
  default: False

flag  examples
  description: Build the example programs
  default: True

flag  xmlhack
  description: Adjust the XML returned by the hub (e.g. for ds9 7.3.2). This is only used if examples is True.
  default: False
--  default: True

library
 default-language: Haskell2010
 build-depends:
   aeson >= 2.0 && < 2.2,
   base >= 4.9 && < 4.18,
   bytestring,
   containers >= 0.5 && < 0.7,            
   data-default-class,
   fast-logger,
   hashable,
   haxr >= 3000.10.0,
   hslogger,
   http-conduit,
   http-types,
   mtl >= 2.2.1,
   network >= 2.7,
   network-uri >= 2.6,
   random,
   scotty >= 0.7,
   split,
   strict,
   text,
   unordered-containers,
   wai,
   wai-extra


 ghc-options:
   -Wall

 -- see https://ghc.haskell.org/trac/ghc/wiki/Migration/8.0#base-4.9.0.0
 --   note: dropping 'fail == 4.9.*' dependency
 --
 if impl(ghc >= 8.8)
   ghc-options: -Wcompat -Wnoncanonical-monad-instances
 else
   ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
   
 hs-source-dirs:   src/
 exposed-modules:
    Network.SAMP.Standard
    Network.SAMP.Standard.Client
    Network.SAMP.Standard.Server
    Network.SAMP.Standard.Server.Scotty
    Network.SAMP.Standard.Setup
    Network.SAMP.Standard.Types

executable testclient
  default-language: Haskell2010
  hs-source-dirs:  examples
  main-is:         TestClient.hs
  other-modules:   Paths_hsamp
                   Utils
                   
  ghc-options:
     -Wall

  if flag(testclient)
    build-depends:
      async,
      base,
      bytestring,
      containers,
      hsamp,
      hslogger,
      mtl,
      network,
      network-uri,
      scotty,
      transformers
      
  else
    buildable:  False

executable hsamp-basicclient
  default-language: Haskell2010
  hs-source-dirs:  examples
  main-is:         BasicClient.hs
  other-modules:   Paths_hsamp

  ghc-options:
     -Wall

  if flag(examples)
    build-depends:
      base,
      containers,
      hsamp,
      hslogger,
      mtl

  else
    buildable:  False

executable hsamp-errorclient
  default-language: Haskell2010
  hs-source-dirs:  examples
  main-is:         ErrorClient.hs
  other-modules:   Paths_hsamp

  ghc-options:
     -Wall

  if flag(examples)
    build-depends:
      base,
      hslogger,
      mtl,
      hsamp

  else
    buildable:  False

executable hsamp-sender
  default-language: Haskell2010
  hs-source-dirs:  examples
  main-is:         Sender.hs
  other-modules:   Paths_hsamp
                   Utils

  ghc-options:
     -Wall

  if flag(examples)
    build-depends:
      async,
      base,
      bytestring,
      containers,            
      hsamp,
      hslogger,
      mtl,            
      network,
      random,
      stm >= 2.4 && < 2.6,
      time,
      transformers
                  
  else
    buildable:  False

executable hsamp-snooper
  default-language: Haskell2010
  hs-source-dirs:  examples
  main-is:         Snooper.hs
  other-modules:   Paths_hsamp
                   Utils

  ghc-options:
     -Wall

  if flag(examples)
    build-depends:
      base,
      bytestring,
      containers,
      hsamp,
      hslogger,
      mtl,
      network,
      stm >= 2.4 && < 2.6,
      transformers

  else
    buildable:  False

executable hsamp-hub
  default-language: Haskell2010
  hs-source-dirs:  examples
  main-is:         Hub.hs
  other-modules:   Paths_hsamp
                   Utils

  if flag(threaded)
    ghc-options:  -Wall -threaded
  else
    ghc-options:  -Wall

  if flag(examples)
    build-depends:
      aeson,
      -- async,
      base,
      base64-bytestring,
      bytestring,
      containers,
      data-default-class,
      directory,
      fast-logger,
      hashable,
      haxr,
      hsamp,
      hslogger,
      http-types,
      mtl,
      network,
      network-uri,
      random,
      scotty,
      stm >= 2.4 && < 2.6,
      text,
      time,
      transformers,
      unix,
      unordered-containers,
      wai,
      wai-extra

    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances

    if flag(xmlhack)
      build-depends: 
        base-compat,
        HsOpenSSL,
        http-streams,
        io-streams,
        utf8-string

      hs-source-dirs:  examples/hackxml
      other-modules:   HubCall
    else
      hs-source-dirs:  examples/dummy
      other-modules:   HubCall
    
  else
    buildable:  False


executable hsamp-testhub
  default-language: Haskell2010
  hs-source-dirs:  examples
  main-is:         TestHub.hs
  other-modules:   Calculator
                   Paths_hsamp
                   TestUtils
                   Utils

  if flag(threaded)
    ghc-options:  -Wall -threaded
  else
    ghc-options:  -Wall

  if flag(examples)
    build-depends:
      -- aeson,
      async,
      base,
      -- base64-bytestring,
      bytestring,
      containers,
      -- data-default-class,
      -- directory,
      -- fast-logger,
      -- hashable,
      -- haxr,
      hsamp,
      hslogger,
      -- http-types,
      MonadRandom >= 0.4 && < 0.7,
      mtl,
      network,
      -- network-uri,
      random,
      -- scotty,
      stm >= 2.4 && < 2.6,
      -- text,
      time,
      transformers
      -- unix,
      -- unordered-containers,
      -- wai,
      -- wai-extra

    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances

  else
    buildable:  False
        
